# sql-agent-dashboard

./: .gitignore  CHART_CONFIG_TEST_REPORT.md  CHART_TYPES_TEST_COMPLETION.md  HOW_TO_TEST.md  PROGRESS.md  PROGRESS_backup.md  README.md  TESTING_COMPLETE.md  TEST_ARTIFACTS_INDEX.md  TEST_DELIVERABLES.txt  TEST_EXECUTION_SUMMARY.txt  chart_types_test.spec.ts  test.sh
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 477c3f057c50_add_dashboards_saved_charts_data_source_.py
backend/src/: main.py
backend/src/api/: chat.py  dashboards.py  data_source_connections.py  data_sources.py  rules.py
backend/src/models/: __init__.py  models.py
backend/src/schemas/: chat.py  dashboard.py  data_source.py  rule.py
backend/src/services/: database.py  llm.py
designs/: dashboard-layout.pen
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/chat/: ChatInterface.tsx
frontend/src/components/ui/: dialog.tsx
frontend/src/components/visualizations/: AreaChartVisualization.tsx  BarChartVisualization.tsx  ChartConfigPanel.tsx  CodeBlock.tsx  ComboChartVisualization.tsx  DonutChartVisualization.tsx  HorizontalBarChartVisualization.tsx  LineChartVisualization.tsx  PieChartVisualization.tsx  ScatterPlotVisualization.tsx  (+2 more)
frontend/src/pages/: DashboardDetailPage.tsx  DashboardsPage.tsx  DataSourcesPage.tsx  RulesPage.tsx
frontend/src/types/: index.ts
test_screenshots/: TEST_REPORT.md
